--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "TuneTracer", root_path, :class => 'brand' %>
+<!--<%= link_to "TuneTracer", root_path, :class => 'brand' %>-->
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
@@ -17,7 +17,7 @@
   <% end %>
   <% if user_signed_in? %>
     <li>
-     <%= link_to 'Manage Playlists', user_path(:id => current_user.name) %>
+     <%= link_to 'Manage Playlists', user_path(:id => current_user.slug) %>
     </li>
     <li>
     <%= link_to 'Edit account', edit_user_registration_path %>
@@ -30,6 +30,12 @@
   <% else %>
     <li>
     <%= link_to 'Sign up', new_user_registration_path %>
+    </li>
+<li>
+   <!-- <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>-->
+   <a href="users/auth/facebook" class="facebook" align="right">
+  <%= image_tag "Small_and_Long_200x24.png", :size => "200x24", :alt => "Facebook" %>
+   </a>
     </li>
   <% end %>
 </ul>
