--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
-<h2>My Profile</h2>
-<p><b>User:</b> <%= @user.name %></p>
+<h2><%=@user.name %>'s Profile</h2>
+<p><b>Name:</b> <%= @user.name %></p>
+<% if (current_user.id == @user.id) %>
+
 <p><b>Email:</b> <%= @user.email if @user.email %></p>
 <p></p>
 <p><h3>Subscription Details</h3></p>
@@ -57,3 +59,4 @@
               <% end %>
       <% end %>
 </table>
+<% end %>
